<?xml version="1.0"?>
<package>
  <name>prov_logging</name>
  <version>0.0.0</version>
  <description>The prov-logging package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="senka@todo.todo">senka</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosprov_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>rosprov_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
